# ot-algorithm-comparison

./: .gitignore  README.md  bary_test.ipynb  color_transfer.py  comparison.ipynb  data_creation_example.ipynb  dataset.py  environment.conda.yaml  gradient_ascent_debug.py  memory_experiments.ipynb  notebook.ipynb  pixi.toml  plotter.ipynb  plotter.py  pushforward_test.ipynb  pyproject.toml  requirements.txt  run_simulations.sbatch  script.sbatch  simple_distributions.ipynb  simple_measurement.py  test.py  time_precision_experiments.py  time_precision_results.html  time_precision_results.ipynb
algorithms/: col_gen.py  gradient_ascent.py  lbfgs.py  pdgd.py  sinkhorn.py
bfm/: c_transform.py  method.py  solver.py
classification/: grad-ascent_pairwise_distances.csv  lp_pairwise_distances.csv  sinkhorn_pairwise_distances.csv
configs/: gaussians.yaml  gaussians_mini.yaml
dashboard/: .env  .env.example  Dockerfile  app.py  convergence_thresholds.py  dataset.py  docker-compose.yaml  export_pdf.py  fly.toml  readme.md  requirements.txt
docs/: color_transfer.md  index.md  mnist.md  slurm.md
notebooks/: back_and_forth.ipynb  back_and_forth_stepsize.ipynb  experiments.ipynb  gaussian_generator_plotly_slider.ipynb  generators_reproducibility.ipynb  gradient.ipynb  gradient_ascent.ipynb  gradient_ascent_variations.ipynb  load_datasets.py  mnist_count_distances.ipynb  scratch_performance_analysis.ipynb  sinkhorn_divergence_lp_validation.ipynb
outputs/: bfm-gm.csv
playground/: ._saga.py  bfm.py  bfm_animation.py  color_transfer.py  gradient.py  lbfgs.py  saga.py  sinkhorn_jax_ott.py
scripts/: basic_slurm_task.sh  gauss_exp_cauchy.extensive.slurm.sh  gaussians.extensive.wooki.slurm.sh  gaussians.wooki.slurm.sh  run_benchmark.sh  run_benchmark_hdf5.sh  run_benchmark_online.sh  run_color_transfer.sh  slurm_nvidia_smi.wookie.sh
synthetic/: 1fb4378f-e2ea-483c-9692-b520761e734f.pkl  3ba0b12d-11a1-4f89-a60d-34c6eb91d2af.pkl
tests/: playground.py  test_color_transfer.py  test_data.py  test_gaussian_mixture_generator.py  test_mnist.py  test_problems.py  test_problems_exponential_generator.py  test_utils_generate_nd_grid.py  test_utils_generator_helpers_exponential.py  test_utils_generator_helpers_gaussian.py  test_utils_generator_to_weights_list.py
uot/: analysis.py  dataset.py  experiment.py  suites.py  tempCodeRunnerFile.py
(+507 files in other folders)
