[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uot"
version = "0.1.15"
description = "Library for comparison of Optimal Transport algorithms"
readme = "README.md"
authors = [
    { name = "Maksym-Vasyl Tarnavskyi", email = "tarnavskyi.pn@ucu.edu.ua" },
    { name = "Maksym Zhuk", email = "zhuk.pn@ucu.edu.ua" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "tqdm",
    "jax[cuda12]",
    "jaxlib",
    "scikit-learn",
    "pot",
    "open3d",
    "ott-jax",
    "memory_profiler",
    "pytest>=7.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
testing = [
    "pytest>=7.0",
]
lint = [
    "black>=23.3.0",
    "ruff>=0.4.1",
]

[tool.setuptools]
packages = [
    "uot",
    "uot.core",
    "uot.experiments",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --disable-warnings -q"
testpaths = ["tests"]

[tool.black]
line-length = 80
target-version = ['py311']

[tool.ruff]
line-length = 80
target-version = "py311"
# Enable common rule sets except import sorting.
[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
# Disable Ruff's import sorting and allow code before imports for jax.
ignore = ["I001", "E402"]
